# RogueSweeper

./: .replit  LICENSE  README.md  main.py  pyproject.toml  replit.md
static/: game.js  manifest.json  style.css  sw.js  text.json
templates/: index.html
