[project]
name = "python-template"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
[tool.poetry]
package-mode = false
dependencies = [
    "flask>=3.1.2",
]

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
